Refactor of menu static methods.
Improve logic in UI and better integration with LocalDate